--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -20,10 +20,10 @@
 {% endcapture %}
 
 <!-- return element -->
-<span class="readtime" data-toggle="tooltip" data-placement="bottom"
-  title="{{ words }} {{ site.data.locales[lang].post.words }}">
-  {{- read_time -}}{{" "}}{{- site.data.locales[lang].post.read_time.unit -}}
-  {%- if include.prompt -%}
-    {% unless site.lang contains 'zh' %}{{" "}}{% endunless %}{{ read_prompt }}
-  {%- endif -%}
-</span>
+<!--<span class="readtime" data-toggle="tooltip" data-placement="bottom"-->
+<!--  title="{{ words }} {{ site.data.locales[lang].post.words }}">-->
+<!--  {{- read_time -}}{{" "}}{{- site.data.locales[lang].post.read_time.unit -}}-->
+<!--  {%- if include.prompt -%}-->
+<!--    {% unless site.lang contains 'zh' %}{{" "}}{% endunless %}{{ read_prompt }}-->
+<!--  {%- endif -%}-->
+<!--</span>-->
