--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@ layout: page
         {% include timeago.html date=post.date tooltip=true %}
 
         <!-- time to read -->
-        <i class="far fa-clock fa-fw"></i>
+<!--        <i class="far fa-clock fa-fw"></i>-->
         {% include read-time.html content=post.content %}
 
         <!-- page views -->
