--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,21 +40,21 @@
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 
   <!-- GA -->
-  {% if jekyll.environment == 'production' %}
-    <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">
-    <link rel="dns-prefetch" href="https://www.google-analytics.com">
+<!--  {% if jekyll.environment == 'production' %}-->
+<!--    <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">-->
+<!--    <link rel="dns-prefetch" href="https://www.google-analytics.com">-->
 
-    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin="anonymous">
-    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+<!--    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin="anonymous">-->
+<!--    <link rel="dns-prefetch" href="https://www.googletagmanager.com">-->
 
-    {% if site.google_analytics.pv.proxy_endpoint %}
-      {% assign proxy_url = site.google_analytics.pv.proxy_endpoint
-        | replace: "https://", "" | split: "/" | first | prepend: "https://" %}
+<!--    {% if site.google_analytics.pv.proxy_endpoint %}-->
+<!--      {% assign proxy_url = site.google_analytics.pv.proxy_endpoint-->
+<!--        | replace: "https://", "" | split: "/" | first | prepend: "https://" %}-->
 
-      <link rel="preconnect" href="{{ proxy_url }}" crossorigin="use-credentials">
-      <link rel="dns-prefetch" href="{{ proxy_url }}">
-    {% endif %}
-  {% endif %}
+<!--      <link rel="preconnect" href="{{ proxy_url }}" crossorigin="use-credentials">-->
+<!--      <link rel="dns-prefetch" href="{{ proxy_url }}">-->
+<!--    {% endif %}-->
+<!--  {% endif %}-->
 
   <!-- jsDelivr CDN -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
