--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,41 +64,41 @@ layout: default
       <div class="post-tail-wrapper text-muted">
 
         <!-- categories -->
-        {% if page.categories.size > 0 %}
+<!--        {% if page.categories.size > 0 %}-->
 
-        <div class="post-meta mb-3">
-          <i class="far fa-folder-open fa-fw mr-1"></i>
-          {% for category in page.categories %}
-            <a href='{{ site.baseurl }}/categories/{{ category | slugify | url_encode }}/'>{{ category }}</a>
-            {%- unless forloop.last -%}, {%- endunless -%}
-          {% endfor %}
-        </div>
-        {% endif %}
+<!--        <div class="post-meta mb-3">-->
+<!--          <i class="far fa-folder-open fa-fw mr-1"></i>-->
+<!--          {% for category in page.categories %}-->
+<!--            <a href='{{ site.baseurl }}/categories/{{ category | slugify | url_encode }}/'>{{ category }}</a>-->
+<!--            {%- unless forloop.last -%}, {%- endunless -%}-->
+<!--          {% endfor %}-->
+<!--        </div>-->
+<!--        {% endif %}-->
 
         <!-- tags -->
-        {% if page.tags.size > 0 %}
-        <div class="post-tags">
-          <i class="fa fa-tags fa-fw mr-1"></i>
-          {% for tag in page.tags %}
-          <a href="{{ site.baseurl }}/tags/{{ tag | slugify | url_encode }}/"
-            class="post-tag no-text-decoration" >
-            {{- tag -}}
-          </a>
-          {% endfor %}
-          </div>
-        {% endif %}
+<!--        {% if page.tags.size > 0 %}-->
+<!--        <div class="post-tags">-->
+<!--          <i class="fa fa-tags fa-fw mr-1"></i>-->
+<!--          {% for tag in page.tags %}-->
+<!--          <a href="{{ site.baseurl }}/tags/{{ tag | slugify | url_encode }}/"-->
+<!--            class="post-tag no-text-decoration" >-->
+<!--            {{- tag -}}-->
+<!--          </a>-->
+<!--          {% endfor %}-->
+<!--          </div>-->
+<!--        {% endif %}-->
 
         <div class="post-tail-bottom
           d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
           <div class="license-wrapper">
-          {% if site.data.locales[lang].copyright.license.template %}
-            {% capture _replacement %}
-            <a href="{{ site.data.locales[lang].copyright.license.link }}">
-              {{ site.data.locales[lang].copyright.license.name }}
-            </a>
-            {% endcapture %}
-            {{ site.data.locales[lang].copyright.license.template | replace: ':LICENSE_NAME', _replacement }}
-          {% endif %}
+<!--          {% if site.data.locales[lang].copyright.license.template %}-->
+<!--            {% capture _replacement %}-->
+<!--            <a href="{{ site.data.locales[lang].copyright.license.link }}">-->
+<!--              {{ site.data.locales[lang].copyright.license.name }}-->
+<!--            </a>-->
+<!--            {% endcapture %}-->
+<!--            {{ site.data.locales[lang].copyright.license.template | replace: ':LICENSE_NAME', _replacement }}-->
+<!--          {% endif %}-->
           </div>
 
           {% include post-sharing.html %}
@@ -128,13 +128,8 @@ layout: default
   <div class="col-12 col-lg-11 col-xl-8">
     <div id="post-extend-wrapper" class="pl-1 pr-1 pl-sm-2 pr-sm-2 pl-md-4 pr-md-4">
 
-    {% include related-posts.html %}
 
-    {% include post-nav.html %}
 
-    {% if site.disqus.comments and page.comments %}
-      {% include disqus.html %}
-    {% endif %}
 
     </div> <!-- #post-extend-wrapper -->
 
