--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,19 +3,19 @@ layout: page
 # All the Tags of posts.
 ---
 
-<div id="tags" class="d-flex flex-wrap ml-xl-2 mr-xl-2">
+<!--<div id="tags" class="d-flex flex-wrap ml-xl-2 mr-xl-2">-->
 
-  {% assign tags = "" | split: "" %}
-  {% for t in site.tags %}
-    {% assign tags = tags | push: t[0] %}
-  {% endfor %}
+<!--  {% assign tags = "" | split: "" %}-->
+<!--  {% for t in site.tags %}-->
+<!--    {% assign tags = tags | push: t[0] %}-->
+<!--  {% endfor %}-->
 
-  {% assign sorted_tags = tags | sort_natural %}
+<!--  {% assign sorted_tags = tags | sort_natural %}-->
 
-  {% for t in sorted_tags %}
-    <div>
-      <a class="tag" href="{{ site.baseurl }}/tags/{{ t | slugify | url_encode }}/">{{ t }}<span class="text-muted">{{ site.tags[t].size }}</span></a>
-    </div>
-  {% endfor %}
+<!--  {% for t in sorted_tags %}-->
+<!--    <div>-->
+<!--      <a class="tag" href="{{ site.baseurl }}/tags/{{ t | slugify | url_encode }}/">{{ t }}<span class="text-muted">{{ site.tags[t].size }}</span></a>-->
+<!--    </div>-->
+<!--  {% endfor %}-->
 
-</div>
+<!--</div>-->
